# unsafe

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: build.yml
include/unsafe/: bind.hpp  iostream.hpp  pointer.hpp  string.hpp  vector.hpp
test/: CMakeLists.txt  bind.cpp  iostream.cpp  pointer.cpp  string.cpp  vector.cpp
